--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-always-auth=truec
-workspaces-experimental=true
 //registry.yarnpkg.com/:_authToken=${YARN_TOKEN}
 //registry.npmjs.org/:_authToken=${NPM_TOKEN}
+always-auth=true
+workspaces-experimental=true
 
