--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "@bicalho/ssldev",
-  "version": "0.0.32-dev",
+  "name": "@bicalho/monorepo",
+  "version": "0.0.0",
   "description": "Servidor https de desenvolvimento",
-  "author": {
-    "name": "Jackson Bicalho",
-    "email": "jacksonbicalho@gmail.com",
-    "url": "https://jacksonbicalho.github.io/"
-  },
+  "author": "Jackson Bicalho <jacksonbicalho@gmail.com> (https://jacksonbicalho.github.io/)",
   "license": "MIT",
   "homepage": "https://github.com/jacksonbicalho/ssldev",
   "bugs": {
@@ -18,19 +14,42 @@
     "packages/*"
   ],
   "scripts": {
-    "after:build": "rimraf --glob './packages/*/tsconfig.tsbuildinfo'",
-    "clean:config": "rimraf --glob './packages/config/build' './packages/config/tsconfig.tsbuildinfo'",
-    "clean:app": "rimraf --glob './packages/app/build' './packages/app/tsconfig.tsbuildinfo'",
-    "clean:all": "yarn clean:config yar clean:app",
-    "build:config": "yarn clean:config && yarn workspace @bicalho/config build",
-    "build:app": "yarn clean:app && yarn workspace @bicalho/app build",
-    "build:all": "yarn build:config && yarn build:app && yarn after:build"
+    "build:config": "yarn workspace @bicalho/config build",
+    "build:ssldev": "yarn workspace @bicalho/ssldev build",
+    "build:utilities": "yarn workspace @bicalho/utilities build",
+    "build:all": "yarn build:config && yarn build:ssldev && yarn build:utilities",
+    "test": "yarn lint && jest --config jest/jest.config.ts",
+    "test:cov": "rm -rf coverage && jest --coverage --config jest/jest.config.ts",
+    "format:base": "prettier \"packages/**/src/*.ts\" \"packages/**/src/__tests__/*.spec.ts\" \"packages/**/build/*.js\"",
+    "format": "yarn format:base --check",
+    "format:fix": "yarn format:base --write",
+    "lint": "eslint \"packages/**/src/__tests__/*.spec.ts\" \"packages/**/build/*.js\"",
+    "lint:fix": "yarn lint --fix"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-serializer-ansi-escapes": "^2.0.1",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "typescript": "^5.3.3"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "@bicalho/utilities": "0.0.1-dev"
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "repository": "git@github.com:jacksonbicalho/bicalho.git",
+  "dependencies": {
+    "jest-serializer-ansi": "^1.0.3"
   }
 }
