--- a/packages/ssldev/package.json
+++ b/packages/ssldev/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bicalho/app",
-  "version": "0.0.1-dev",
+  "name": "@bicalho/ssldev",
+  "version": "0.0.2-dev",
   "description": "App",
   "author": {
     "name": "Jackson Bicalho",
@@ -20,15 +20,20 @@
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "yarn build && node ./build/index.js"
+    "build": "rm -rf ./build && tsc -p ./tsconfig.build.json && rm -rf tsconfig.build.tsbuildinfo",
+    "start": "node ./build/index.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "serve-handler": "^6.1.5",
+    "@bicalho/config": "^0.0.1-dev"
+  },
   "devDependencies": {
-    "@bicalho/config": "^0.0.1-dev",
-    "@types/node": "^20.8.10",
-    "ts-node": "^10.9.1",
-    "typescript": ">=4.3.5 <5.3.0"
+    "@types/node": "^20.10.5",
+    "@types/prompts": "^2.4.8",
+    "@types/semver": "^7.5.6",
+    "@types/serve-handler": "^6.1.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
