--- a/packages/ssldev/tsconfig.json
+++ b/packages/ssldev/tsconfig.json
@@ -7,5 +7,11 @@
     "outDir": "build"
   },
   "typeRoots": ["node_modules/@types"],
-  "include": ["src"]
+  "include": ["src"],
+  "references": [
+    {
+      "path": "../config"
+    }
+  ]
 }
+
