--- a/packages/utilities/tsconfig.json
+++ b/packages/utilities/tsconfig.json
@@ -2,15 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "emitDeclarationOnly": false,
+    "esModuleInterop": true,
     "rootDir": "src",
     "outDir": "build"
   },
-  "include": [
-    "**/*.ts"
-  ],
-  "references": [
-    {
-      "path": "../config"
-    }
-  ]
+  "typeRoots": ["node_modules/@types"],
+  "include": ["src"]
 }
