--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
 
     volumes:
       - ./:${DOCKER_WORK_DIR}
+      - ~/.ssh/github:/home/bicalho/.ssh/github
 
     ports:
       - ${DOCKER_HOST_PORT}:${SERVER_PORT}
