--- a/packages/ssldev/package.json
+++ b/packages/ssldev/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bicalho/ssldev",
-  "version": "0.0.2-dev",
+  "version": "0.0.5-dev",
   "description": "App",
   "author": {
     "name": "Jackson Bicalho",
@@ -27,13 +27,13 @@
     "serve-handler": "^6.1.5"
   },
   "devDependencies": {
+    "@bicalho/custom-config": "^0.0.5-dev",
     "@types/node": "^20.10.5",
     "@types/prompts": "^2.4.8",
     "@types/semver": "^7.5.6",
     "@types/serve-handler": "^6.1.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "@bicalho/custom-config": "0.0.2-dev"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
