--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     image: ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${TARGET}
     secrets:
       - npmrc
+      - ssh_github
 
     volumes:
       - ./:${DOCKER_WORK_DIR}
