--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
 
     volumes:
       - ./:${DOCKER_WORK_DIR}
+      - ~/.ssh/github:/home/${DOCKER_USER_NAME}/.ssh/github
 
     ports:
       - ${DOCKER_HOST_PORT}:${SERVER_PORT}
