--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@bicalho/ssldev",
-  "version": "0.0.5-dev",
-  "description": "App",
+  "name": "@bicalho/cli",
+  "version": "0.0.1-dev",
+  "description": "Cli",
   "author": {
     "name": "Jackson Bicalho",
     "email": "jacksonbicalho@gmail.com",
@@ -24,9 +24,12 @@
     "start": "node ./build/index.js"
   },
   "dependencies": {
-    "serve-handler": "^6.1.5"
+    "serve-handler": "^6.1.5",
+    "commander": "^11.1.0",
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@bicalho/custom-config": "^0.0.5-dev",
     "@types/node": "^20.10.5",
     "@types/prompts": "^2.4.8",
     "@types/semver": "^7.5.6",
