--- a/example.env
+++ b/example.env
@@ -52,6 +52,7 @@ NODE_ENV=development
 ## Git config
 GIT_CONFIG_USER_NAME="<git_config_user_name>"
 GIT_CONFIG_USER_EMAIL=<git_config_user_email>
+GIT_PRIVATE_KEY=<GIT_PRIVATE_KEY>
 
 #----------------------------------------------------------
 # Node Publish config
