--- a/packages/custom-config/package.json
+++ b/packages/custom-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bicalho/custom-config",
-  "version": "0.0.5-dev",
+  "version": "0.0.5-dev.0",
   "description": "Custom configuration",
   "author": {
     "name": "Jackson Bicalho",
