--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bicalho/utilities",
-  "version": "0.0.5-dev",
+  "version": "0.0.5-dev.0",
   "description": "utilities",
   "author": {
     "name": "Jackson Bicalho",
