--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,5 +39,9 @@
   },
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "43ef28c9bc5e795e892707a3b76bb362715bf936"
 }
