:feat - lerna-changelog adicionado

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
         - GIT_CONFIG_USER_NAME=${GIT_CONFIG_USER_NAME}
         - GIT_CONFIG_USER_EMAIL=${GIT_CONFIG_USER_EMAIL}
         - GIT_PRIVATE_KEY=${GIT_PRIVATE_KEY}
+        - GITHUB_AUTH=${GITHUB_AUTH}
 
     container_name: ${APP_NAME}-${NODE_ENV}-${TARGET}
     image: ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-${TARGET}
