--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-serializer-ansi-escapes": "^2.0.1",
+    "lerna-changelog": "^2.2.0",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
