:feat - #18 - Testando bash

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,10 +39,10 @@
   "dependencies": {
     "commander": "^11.1.0",
     "prompts": "^2.4.2",
-    "serve-handler": "^6.1.5"
+    "serve-handler": "^6.1.5",
+    "@bicalho/custom-config": "0.0.5-dev.2"
   },
   "devDependencies": {
-    "@bicalho/custom-config": "^0.0.5-dev.2",
     "@types/node": "^20.10.5",
     "@types/prompts": "^2.4.8",
     "@types/semver": "^7.5.6",
