--- a/lerna.json
+++ b/lerna.json
@@ -8,13 +8,11 @@
   "npmClient": "yarn",
   "command": {
     "version": {
-      "conventionalCommits": true,
       "conventional-prerelease": true,
       "sync-workspace-lock": true
     },
     "publish": {
-      "conventionalCommits": true,
-      "message": "chore(release): publish new version %v"
+      "conventionalCommits": true
     }
   }
 }
