--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bicalho/cli",
-  "version": "0.0.1-dev.3",
+  "version": "0.0.1-dev.4",
   "description": "Cli - ferramentas",
   "author": {
     "name": "Jackson Bicalho",
@@ -37,10 +37,10 @@
     "start": "node ./build/index.js"
   },
   "dependencies": {
+    "@bicalho/custom-config": "0.0.5-dev.2",
     "commander": "^11.1.0",
     "prompts": "^2.4.2",
-    "serve-handler": "^6.1.5",
-    "@bicalho/custom-config": "0.0.5-dev.2"
+    "serve-handler": "^6.1.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
