--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "new-version": "npx lerna version",
     "publish:all": "yarn cache clean --all && yarn test && yarn build:all && npx lerna publish",
     "preview:new-version": "npx lerna version --dry-run --sync-workspace-lock",
-    "commitlint": "commitlint --edit"
+    "cli": "npx @bicalho/cli"
   },
   "devDependencies": {
+    "@bicalho/cli": "^0.0.1-dev.5",
     "@commander-js/extra-typings": "^11.1.0",
     "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-lerna-scopes": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@jest/globals": "^29.7.0",
-    "@lerna-lite/cli": "^3.1.0",
     "@lerna-lite/publish": "^3.1.0",
-    "@lerna-lite/run": "^3.1.0",
     "@lerna-lite/version": "^3.1.0",
+    "@types/import-local": "^3.1.2",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
@@ -50,22 +50,23 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^8.0.3",
+    "import-from": "^4.0.0",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-serializer-ansi-escapes": "^2.0.1",
-    "lerna-changelog": "^2.2.0",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "types-package-json": "^2.0.39",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "workspace": "^0.0.1-preview.1"
   },
   "engines": {
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@bicalho/utilities": "^0.0.5-dev.2",
+    "@bicalho/utilities": "./packages/utilities/",
     "global": "^4.4.0",
     "jest-serializer-ansi": "^1.0.3",
     "remove": "^0.1.5"
