fix: Alterando configuração do commitlint

--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "format:base": "prettier \"packages/**/src/*.ts\" \"packages/**/src/__tests__/*.spec.ts\" \"packages/**/build/*.js\"",
     "format": "yarn format:base --check",
     "format:fix": "yarn format:base --write",
-    "lint": "eslint \"packages/**/src/__tests__/*.spec.ts\" \"packages/**/build/*.js\"",
+    "lint": "eslint \"packages/**/src/__tests__/*.spec.ts\"",
     "lint:fix": "yarn lint --fix",
     "new-version": "npx lerna version",
     "publish:all": "yarn cache clean --all && yarn test && yarn build:all && npx lerna publish",
     "preview:new-version": "npx lerna version --dry-run --sync-workspace-lock",
+    "commit": "commit",
     "cli": "npx @bicalho/cli"
   },
   "devDependencies": {
@@ -37,14 +38,15 @@
     "@commander-js/extra-typings": "^11.1.0",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/prompt-cli": "^18.4.3",
     "@jest/globals": "^29.7.0",
     "@lerna-lite/publish": "^3.1.0",
     "@lerna-lite/version": "^3.1.0",
     "@types/import-local": "^3.1.2",
     "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
+    "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
