feat(monorepo): commitizen
feat #22

--- a/example.env
+++ b/example.env
@@ -58,5 +58,5 @@ GIT_PRIVATE_KEY=<GIT_PRIVATE_KEY>
 # Node Publish config
 #----------------------------------------------------------
 # NODE PUBLISH
-NPM_TOKEN=<nm_token_publish>
-YARN_TOKEN=<yarn_token_publish>
+#= NPM_TOKEN=<nm_token_publish>
+#= YARN_TOKEN=<yarn_token_publish>
