--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "lint:fix": "yarn lint --fix",
     "new-version": "npx lerna version",
     "publish:all": "yarn cache clean --all && yarn test && yarn build:all && npx lerna publish",
-    "preview:new-version": "npx lerna version --dry-run --sync-workspace-lock",
-    "commit": "commit",
+    "commitizen": "npx commitizen",
+    "commit": "cz",
     "cli": "npx @bicalho/cli"
   },
   "devDependencies": {
@@ -48,6 +48,10 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "commander": "^11.1.0",
+    "commitizen": "^4.3.0",
+    "conventional-changelog-atom": "^4.0.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
+    "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -84,6 +88,16 @@
       "Type: Feature": "Features",
       "Type: Bug": "Bug fixes",
       "Type: Enhancement": "Enhancements"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
     }
   }
 }
