--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,105 @@
+cacheFolder: "./.yarn/cache"
+
 nodeLinker: node-modules
+
 yarnPath: .yarn/releases/yarn-4.0.2.cjs
+
+# "required-only" | "match-spec" | "always"
+cacheMigrationMode: "required-only"
+
+changesetBaseRefs: [
+  "master",
+  "origin/master",
+  "upstream/master"
+]
+
+changesetIgnorePatterns: [
+  "**/*.spenc.{js,ts}"
+]
+
+# "throw" | "update" | "ignore" | "reset"
+checksumBehavior: "reset"
+
+cloneConcurrency: 2
+
+# 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | "mixed"
+compressionLevel: 9
+
+constraintsPath: "./constraints.pro"
+
+defaultLanguageName: "node"
+
+defaultProtocol: "yarn:"
+
+ # "^" | "~" | ""
+defaultSemverRangePrefix: "^"
+
+deferredVersionFolder: "./.yarn/versions"
+
+# true | fase
+enableColors: true
+
+# true | fase
+enableConstraintsChecks: true
+
+# true | fase
+enableGlobalCache: true
+
+# true | fase
+enableHardenedMode: true
+
+# true | fase
+enableHyperlinks: true
+
+# true | fase
+enableImmutableCache: false
+
+# true | fase
+enableImmutableInstalls: false
+
+# true | fase
+enableInlineBuilds: false
+
+# true | fase
+enableInlineHunks: false
+
+# true | fase
+enableMessageNames: true
+
+# true | fase
+npmAlwaysAuth: false
+
+npmAuditRegistry: "https://registry.npmjs.org"
+
+npmAuthToken: ${NPM_AUTH_TOKEN}
+
+# "public" | "restricted"
+npmPublishAccess: "public"
+
+npmAuditExcludePackages: []
+
+npmAuditIgnoreAdvisories: []
+
+# true | fase
+pnpEnableEsmLoader: false
+
+# true | fase
+pnpEnableInlining: false
+
+# "none" | "dependencies-only" | "all"
+pnpFallbackMode: "none"
+
+pnpIgnorePatterns: [
+  "./subdir/*"
+]
+
+# "strict" | "loose"
+pnpMode: "strict"
+
+pnpShebang: "#!/usr/bin/env node"
+
+
+
+
+
+
