--- a/.gitignore
+++ b/.gitignore
@@ -44,13 +44,13 @@ package-lock.json
 api-extractor.json
 
 # https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored but nested for e2e directories
-**/.yarn/*
-!**/.yarn/patches
-!**/.yarn/releases
-!**/.yarn/plugins
-!**/.yarn/sdks
-!**/.yarn/versions
-**/.pnp.*
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 
 crowdin-cli.jar
